--- a/app/components/ServicesRegistrationPaper.module.css
+++ b/app/components/ServicesRegistrationPaper.module.css
@@ -45,13 +45,13 @@
   flex-shrink: 0;
   position: relative;
   overflow: visible;
-  height: calc(100svh - 8rem);
+  height: calc(100 * var(--avh) - 8rem);
   max-height: 50em;
 }
 
 @media (max-width: 768px) {
   .container {
-    height: calc(100svh - 6rem);
+    height: calc(100 * var(--avh) - 6rem);
     max-height: none;
   }
 }
