--- a/app/onboarding/page.module.css
+++ b/app/onboarding/page.module.css
@@ -7,8 +7,8 @@
   left: 0.5rem;
   right: 0.5rem;
   width: calc(100% - 1.2rem);
-  height: calc(100svh - 1.2rem);
-  max-height: calc(100svh - 1.2rem);
+  height: calc(100 * var(--avh) - 1.2rem);
+  max-height: calc(100 * var(--avh) - 1.2rem);
   z-index: 10;
   border-radius: 1.5rem;
   overflow: hidden;
